force-app/main/default/objects/CTRCommitteeApproval__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalResult__c</fullName>
        <label>Approval Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted Yet</fullName>
                </value>
                <value>
                    <fullName>Waiting Section Head Review</fullName>
                </value>
                <value>
                    <fullName>Reverted to Credit Team</fullName>
                </value>
                <value>
                    <fullName>Submit to Committee</fullName>
                </value>
                <value>
                    <fullName>Reply to TRCR</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reply to FA</fullName>
                </value>
                <value>
                    <fullName>Reply to FALB</fullName>
                </value>
                <value>
                    <fullName>Reverted to FA</fullName>
                    <isActive>false</isActive>
                    <label>Reverted to FA</label>
                </value>
                <value>
                    <fullName>Submit for Approval</fullName>
                    <isActive>false</isActive>
                    <label>Submit for Approval</label>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                    <isActive>false</isActive>
                    <label>Waiting for Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApproverName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Committee_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTRReqItemName__c</fullName>
        <formula>CTRRequestFormItem__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTR Request Form Item Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRRequestFormItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR Request Form Item</label>
        <referenceTo>CTRRequestFormItem__c</referenceTo>
        <relationshipName>Committee_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <formula>CTRRequestFormItem__r.CTRRequestFormHeader__r.Customer__r.CompanyNameENF__c</formula>
        <label>CustomerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplytoFALB__c</fullName>
        <description>dup field reply to TRCR ถ้าอยากใช้ให้สร้าง formula แสดงตาม layout เอา</description>
        <label>Reply to FALB (Not Used)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplytoFA__c</fullName>
        <description>dup field reply to TRCR ถ้าอยากใช้ให้สร้าง formula แสดงตาม layout เอา</description>
        <label>Reply to FA (Not Used)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplytoTRCR__c</fullName>
        <label>Reply to TRCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRCRSectionHead__c</fullName>
        <formula>CTRRequestFormItem__r.CreditOwnerSectionHead__r.FirstName &amp; &quot; &quot; &amp; CTRRequestFormItem__r.CreditOwnerSectionHead__r.LastName</formula>
        <label>TRCRSectionHead</label>
        <type>Text</type>
    </fields>
    <label>CTR Committee Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CTRRequestFormItem__c</columns>
        <columns>ApprovalResult__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Committee Approval Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>